--- a/plotjuggler_plugins/DataStreamUDP/CMakeLists.txt
+++ b/plotjuggler_plugins/DataStreamUDP/CMakeLists.txt
@@ -1,19 +1,14 @@
+include_directories(../)
 
-include_directories( ../ )
+qt5_wrap_ui(UI_SRC udp_server.ui)
 
-add_definitions(${QT_DEFINITIONS})
-add_definitions(-DQT_PLUGIN)
+set(SRC udp_server.cpp)
 
-QT5_WRAP_UI ( UI_SRC  udp_server.ui  )
+add_library(DataStreamUDP SHARED ${SRC} ${UI_SRC})
 
-SET( SRC udp_server.cpp )
+target_link_libraries(DataStreamUDP PRIVATE Qt5::Widgets Qt5::Network
+                                            plotjuggler_base)
 
-add_library(DataStreamUDP SHARED ${SRC} ${UI_SRC}  )
+target_compile_definitions(DataStreamUDP PRIVATE QT_PLUGIN)
 
-target_link_libraries(DataStreamUDP
-    ${Qt5Widgets_LIBRARIES}
-    Qt5::Network
-    plotjuggler_base
-    )
-
-install(TARGETS DataStreamUDP DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
+install(TARGETS DataStreamUDP DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY})
