--- a/plotjuggler_plugins/DataLoadCSV/CMakeLists.txt
+++ b/plotjuggler_plugins/DataLoadCSV/CMakeLists.txt
@@ -1,25 +1,13 @@
+include_directories(../)
 
-include_directories(  ../ )
+qt5_wrap_ui(UI_SRC dataload_csv.ui datetimehelp.ui)
 
-add_definitions(${QT_DEFINITIONS})
-add_definitions(-DQT_PLUGIN)
+set(SRC dataload_csv.cpp datetimehelp.cpp)
 
-QT5_WRAP_UI ( UI_SRC
-    dataload_csv.ui
-    datetimehelp.ui
-    )
+add_library(DataLoadCSV SHARED ${SRC} ${UI_SRC})
+target_link_libraries(DataLoadCSV PRIVATE Qt5::Widgets Qt5::Xml
+                                          plotjuggler_base QCodeEditor)
 
-SET( SRC
-    dataload_csv.cpp
-    datetimehelp.cpp
-    )
+target_compile_definitions(DataLoadCSV PRIVATE QT_PLUGIN)
 
-add_library(DataLoadCSV SHARED ${SRC} ${UI_SRC}  )
-target_link_libraries(DataLoadCSV
-    ${Qt5Widgets_LIBRARIES}
-    ${Qt5Xml_LIBRARIES}
-    plotjuggler_base
-    QCodeEditor)
-
-
-install(TARGETS DataLoadCSV DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
+install(TARGETS DataLoadCSV DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY})
