--- a/plotjuggler_plugins/DataLoadULog/CMakeLists.txt
+++ b/plotjuggler_plugins/DataLoadULog/CMakeLists.txt
@@ -1,25 +1,14 @@
+include_directories(../)
 
-include_directories(  ../ )
+qt5_wrap_ui(UI_SRC ../selectlistdialog.ui ulog_parameters_dialog.ui)
 
-add_definitions(${QT_DEFINITIONS})
-add_definitions(-DQT_PLUGIN)
+set(SRC dataload_ulog.cpp ulog_parser.cpp ulog_parameters_dialog.cpp)
 
-QT5_WRAP_UI ( UI_SRC
-    ../selectlistdialog.ui
-    ulog_parameters_dialog.ui
-    )
+add_library(DataLoadULog SHARED ${SRC} ${UI_SRC})
 
-SET( SRC
-    dataload_ulog.cpp
-    ulog_parser.cpp
-    ulog_parameters_dialog.cpp
-    )
+target_link_libraries(DataLoadULog PRIVATE Qt5::Widgets Qt5::Xml
+                                           plotjuggler_base)
 
-add_library(DataLoadULog SHARED ${SRC} ${UI_SRC}  )
+target_compile_definitions(DataLoadULog PRIVATE QT_PLUGIN)
 
-target_link_libraries(DataLoadULog
-    ${Qt5Widgets_LIBRARIES}
-    ${Qt5Xml_LIBRARIES}
-    plotjuggler_base)
-
-install(TARGETS DataLoadULog DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
+install(TARGETS DataLoadULog DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY})
