--- a/plotjuggler_plugins/DataStreamSample/CMakeLists.txt
+++ b/plotjuggler_plugins/DataStreamSample/CMakeLists.txt
@@ -1,16 +1,12 @@
+include_directories(../)
 
-include_directories( ../ )
+set(SRC datastream_sample.cpp)
 
-add_definitions(${QT_DEFINITIONS})
-add_definitions(-DQT_PLUGIN)
+add_library(DataStreamSample SHARED ${SRC} ${UI_SRC})
 
-SET( SRC datastream_sample.cpp)
+target_link_libraries(DataStreamSample PRIVATE Qt5::Widgets Qt5::Xml
+                                               plotjuggler_base)
 
-add_library(DataStreamSample SHARED ${SRC} ${UI_SRC}  )
+target_compile_definitions(DataStreamSample PRIVATE QT_PLUGIN)
 
-target_link_libraries(DataStreamSample
-    ${Qt5Widgets_LIBRARIES}
-    ${Qt5Xml_LIBRARIES}
-    plotjuggler_base)
-
-install(TARGETS DataStreamSample DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
+install(TARGETS DataStreamSample DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY})
