--- a/plotjuggler_plugins/ParserLineInflux/CMakeLists.txt
+++ b/plotjuggler_plugins/ParserLineInflux/CMakeLists.txt
@@ -1,16 +1,7 @@
+add_library(ParserLineInflux SHARED line_parser.cpp line_parser.h)
 
-add_definitions(${QT_DEFINITIONS})
-add_definitions(-DQT_PLUGIN)
+target_link_libraries(ParserLineInflux PRIVATE Qt5::Widgets plotjuggler_base)
 
+target_compile_definitions(ParserLineInflux PRIVATE QT_PLUGIN)
 
-add_library(ParserLineInflux SHARED
-    line_parser.cpp
-    line_parser.h )
-
-target_link_libraries(ParserLineInflux
-    ${Qt5Widgets_LIBRARIES}
-    plotjuggler_base)
-
-
-install(TARGETS ParserLineInflux
-    DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
+install(TARGETS ParserLineInflux DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY})
