--- a/plotjuggler_plugins/ToolboxQuaternion/CMakeLists.txt
+++ b/plotjuggler_plugins/ToolboxQuaternion/CMakeLists.txt
@@ -1,22 +1,14 @@
+include_directories(../)
 
-include_directories( ../ )
+qt5_wrap_ui(UI_SRC quaternion_to_rpy.ui)
 
-add_definitions(${QT_DEFINITIONS})
-add_definitions(-DQT_PLUGIN)
+add_library(ToolboxQuaternion SHARED toolbox_quaternion.cpp
+                                     quaternion_to_rpy.cpp ${UI_SRC})
 
-QT5_WRAP_UI ( UI_SRC
-    quaternion_to_rpy.ui
-    )
+target_link_libraries(
+  ToolboxQuaternion PRIVATE Qt5::Widgets Qt5::Xml plotjuggler_base
+                            plotjuggler_qwt)
 
-add_library(ToolboxQuaternion SHARED
-    toolbox_quaternion.cpp
-    quaternion_to_rpy.cpp
-    ${UI_SRC}  )
+target_compile_definitions(ToolboxQuaternion PRIVATE QT_PLUGIN)
 
-target_link_libraries(ToolboxQuaternion
-    ${Qt5Widgets_LIBRARIES}
-    ${Qt5Xml_LIBRARIES}
-    plotjuggler_base
-    plotjuggler_qwt)
-
-install(TARGETS ToolboxQuaternion DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
+install(TARGETS ToolboxQuaternion DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY})
