--- a/plotjuggler_plugins/ParserProtobuf/CMakeLists.txt
+++ b/plotjuggler_plugins/ParserProtobuf/CMakeLists.txt
@@ -31,7 +31,7 @@ if(Protobuf_FOUND)
 
   target_link_libraries(
     ProtobufParser PRIVATE Qt5::Widgets Qt5::Xml ${Protobuf_LIBS}
-                           plotjuggler_base plotjuggler_qwt)
+                           plotjuggler_base plotjuggler_qwt fmt::fmt)
 
   install(TARGETS ProtobufParser DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY})
 else()
