--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -2,12 +2,12 @@ name: windows
 
 on:
   push:
+    branches:
+      - main
     tags:
-      - 'v*'  # Trigger on version tags like v3.10.0
+      - '[0-9]+.[0-9]+.[0-9]+'
   pull_request:
-    types: [opened, synchronize, closed]
-  workflow_dispatch:  # Manual trigger
-
+    types: [opened, synchronize]
 jobs:
 
   windows-build:
@@ -74,7 +74,7 @@ jobs:
         shell: pwsh
         run: |
           # Get version from tag or use default
-          $version = if ($env:GITHUB_REF -match "refs/tags/v(.+)") { $matches[1] } else { "dev" }
+          $version = if ($env:GITHUB_REF -match "refs/tags/([0-9]+\.[0-9]+\.[0-9]+)") { $matches[1] } else { "dev" }
           $installer_name = "PlotJuggler-$version-Windows-x64.exe"
 
           # Find binarycreator executable
@@ -103,3 +103,10 @@ jobs:
         with:
           name: ${{ steps.create_installer.outputs.installer_name }}
           path: ${{ steps.create_installer.outputs.installer_name }}
+
+      - name: Upload to Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: ${{ steps.create_installer.outputs.installer_name }}
+          generate_release_notes: true
