--- a/plotjuggler_plugins/ParserIDL/CMakeLists.txt
+++ b/plotjuggler_plugins/ParserIDL/CMakeLists.txt
@@ -1,8 +1,14 @@
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/dds_parser")
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/dds-parser/CMakeLists.txt")
+
   set(DDS_PARSER_BUILD_TESTING
       OFF
       CACHE BOOL "Force DDS_PARSER_BUILD_TESTING to OFF" FORCE)
-  add_subdirectory(dds_parser)
+
+  set(DDS_PARSER_CSV_EXPORTER
+      OFF
+      CACHE BOOL "Force DDS_PARSER_CSV_EXPORTER to OFF" FORCE)
+
+  add_subdirectory(dds-parser)
 
   add_library(ParserDDS SHARED idl_parser.cpp)
 
