--- a/plotjuggler_app/CMakeLists.txt
+++ b/plotjuggler_app/CMakeLists.txt
@@ -1,7 +1,14 @@
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_package(wasmtime QUIET)
+
 qt5_add_resources(RES_SRC resource.qrc)
+
+if(WIN32)
+  # Adds icon to plotjuggler.exe
+  set(RES_SRC ${RES_SRC} plotjuggler.rc)
+endif()
 
 qt5_wrap_ui(
   UI_SRC
@@ -31,9 +38,9 @@ qt5_wrap_ui(
   transforms/samples_count.ui
   cheatsheet/cheatsheet_dialog.ui)
 
-set(PLOtJUGGLER_SRC
+set(PLOTJUGGLER_SRC
     cheatsheet/cheatsheet_dialog.cpp
-    customtracker.cpp
+    curve_tracker.cpp
     multifile_prefix.cpp
     colormap_editor.cpp
     colormap_selector.cpp
@@ -47,7 +54,7 @@ set(PLOtJUGGLER_SRC
     messageparser_base.cpp
     menubar.cpp
     new_release_dialog.cpp
-    # plotlegend.cpp
+    plugin_manager.cpp
     plotwidget.cpp
     plotwidget_editor.cpp
     plotwidget_transforms.cpp
@@ -80,10 +87,13 @@ set(PLOtJUGGLER_SRC
     utils.cpp
     mainwindow.h
     realslider.h
+    wasm_runtime.cpp
+    wasm_parser.cpp
     nlohmann_parsers.cpp)
 
-add_executable(plotjuggler ${PLOtJUGGLER_SRC} ${RES_SRC} ${UI_SRC}
+add_executable(plotjuggler ${PLOTJUGGLER_SRC} ${RES_SRC} ${UI_SRC}
                            ${BACKWARD_ENABLE})
+
 
 if(NOT WIN32)
   add_backward(plotjuggler)
@@ -101,6 +111,7 @@ target_include_directories(
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/3rdparty/Qt-Advanced-Docking/include>
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/3rdparty/QCodeEditor/include>)
 
+
 target_link_libraries(
   plotjuggler
   PRIVATE ${QT_LINK_LIBRARIES}
@@ -111,7 +122,9 @@ target_link_libraries(
           QCodeEditor
           nlohmann_json::nlohmann_json
           fmt::fmt
-          lua::lua)
+          lua::lua
+          wasmtime::wasmtime
+        )
 
 if(COMPILING_WITH_CATKIN)
   target_link_libraries(plotjuggler PRIVATE ${catkin_LIBRARIES})
