--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.16)
 project(
   plotjuggler
   LANGUAGES C CXX
-  VERSION 3.13.0)
+  VERSION 3.13.1)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -148,7 +148,6 @@ include_directories(
   ${Qt5OpenGL_INCLUDE_DIRS})
 
 # ########################  3rd party dependencies  #########################
-
 include(FetchContent)
 include(cmake/CPM.cmake)
 
@@ -164,8 +163,21 @@ find_or_download_json()
 include(cmake/find_or_download_fmt.cmake)
 find_or_download_fmt()
 
-include(cmake/find_or_download_wasmtime.cmake)
-find_or_download_wasmtime()
+# IMPORTANT: LZ4 and ZSTD must be included after Arrow, since Arrow also includes
+# Findlz4Alt.cmake and FindzstdAlt.cmake and we want to avoid target conflicts
+find_package(Arrow QUIET)
+
+include(${PROJECT_SOURCE_DIR}/cmake/find_or_download_lz4.cmake)
+find_or_download_lz4()
+
+include(${PROJECT_SOURCE_DIR}/cmake/find_or_download_zstd.cmake)
+find_or_download_zstd()
+
+if(NOT COMPILING_WITH_AMENT)
+  include(cmake/download_wasmtime.cmake)
+  download_wasmtime()
+endif()
+
 
 add_subdirectory(3rdparty/qwt/src)
 add_subdirectory(3rdparty/QCodeEditor)
