--- a/snap_core22/snapcraft.yaml
+++ b/snap_core22/snapcraft.yaml
@@ -31,6 +31,7 @@ parts:
     cmake-parameters:
       - -DBASE_AS_SHARED=ON
       - -DCMAKE_BUILD_TYPE=Release
+      - -DPJ_INSTALLATION="snap-humble"
       - "-DCMAKE_PREFIX_PATH=$(echo $SNAPCRAFT_CMAKE_ARGS | awk -F= '{printf(\"%s/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/cmake/Qt5\", $2)}')"
     build-packages:
       - distro-info-data
