--- a/plotjuggler_plugins/ParserProtobuf/CMakeLists.txt
+++ b/plotjuggler_plugins/ParserProtobuf/CMakeLists.txt
@@ -24,8 +24,15 @@ if(Protobuf_FOUND)
     ${UI_SRC})
 
   if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    find_library(ABSL_SPINLOCK_WAIT_LIB absl_spinlock_wait)
-    target_link_libraries(ProtobufParser PRIVATE ${ABSL_SPINLOCK_WAIT_LIB})
+    find_package(absl QUIET)
+    if(absl_FOUND)
+      target_link_libraries(ProtobufParser PRIVATE absl::spinlock_wait)
+    else()
+      find_library(ABSL_SPINLOCK_WAIT_LIB absl_spinlock_wait)
+      if(ABSL_SPINLOCK_WAIT_LIB)
+        target_link_libraries(ProtobufParser PRIVATE ${ABSL_SPINLOCK_WAIT_LIB})
+      endif()
+    endif()
     target_compile_definitions(ProtobufParser PRIVATE QT_PLUGIN)
   endif()
 
