--- a/.github/workflows/debian.yaml
+++ b/.github/workflows/debian.yaml
@@ -131,5 +131,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: plotjuggler_${{ steps.define_version.outputs.version }}_amd64_${{ steps.dist_short.outputs.short_name }}.deb
-          generate_release_notes: true
+          generate_release_notes: false
           fail_on_unmatched_files: false
