--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,12 +44,12 @@ repos:
         args: ['-fallback-style=none', '-i']
 
   # Spell check
-  - repo: https://github.com/codespell-project/codespell
-    rev: v2.4.1
-    hooks:
-      - id: codespell
-        additional_dependencies:
-        -   tomli
-        args:
-            [--toml=./tools/pyproject.toml]
-        exclude_types: [svg]
+  # - repo: https://github.com/codespell-project/codespell
+  #   rev: v2.4.1
+  #   hooks:
+  #     - id: codespell
+  #       additional_dependencies:
+  #       -   tomli
+  #       args:
+  #           [--toml=./tools/pyproject.toml]
+  #       exclude_types: [svg]
