--- a/plotjuggler_plugins/DataLoadCSV/CMakeLists.txt
+++ b/plotjuggler_plugins/DataLoadCSV/CMakeLists.txt
@@ -1,8 +1,14 @@
 include_directories(../)
 
+# Include Howard Hinnant's date library for improved timestamp parsing
+include_directories(${CMAKE_SOURCE_DIR}/3rdparty/date-3.0.4/include)
+
 qt5_wrap_ui(UI_SRC dataload_csv.ui datetimehelp.ui)
 
-set(SRC dataload_csv.cpp datetimehelp.cpp)
+set(SRC
+    dataload_csv.cpp
+    datetimehelp.cpp
+    timestamp_parsing.cpp)
 
 add_library(DataLoadCSV SHARED ${SRC} ${UI_SRC})
 target_link_libraries(DataLoadCSV PRIVATE Qt5::Widgets Qt5::Xml
